[package]
name = "buttplug_derive"
version = "0.9.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Trait Derive Macros for Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug-rs.git"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.111"
# Required to stay <= 1.0.40 to satisfy dependency in serial port hardware manager. :(
quote = "1.0.40"
