[package]
name = "buttplug_server"
version = "10.0.0-beta4"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["cdylib", "rlib"]

[features]
default=[]
wasm=["uuid/js"]

[dependencies]
buttplug_core = { version = "10.0.0-beta3", path = "../buttplug_core" }
buttplug_server_device_config = { version = "10.0.0-beta3", path = "../buttplug_server_device_config" }
futures = "0.3.31"
futures-util = "0.3.31"
thiserror = "2.0.17"
log = "0.4.29"
getset = "0.1.6"
tokio = { version = "1.48.0", features = ["macros"] }
dashmap = { version = "6.1.0" }
tracing-futures = "0.2.5"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
jsonschema = { version = "0.38.1", default-features = false }
once_cell = "1.21.3"
tokio-stream = "0.1.17"
strum_macros = "0.27.2"
strum = "0.27.2"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
instant = "0.1.13"
tokio-util = "0.7.17"
regex = "1.12.2"
prost = "0.14.1"
paste = "1.0.15"
aes = { version = "0.8.4" }
ecb = { version = "0.1.2", features = ["std"] }
sha2 = { version = "0.10.9", features = ["std"] }
byteorder = "1.5.0"
# Used by several packages, but we need to bring in the JS feature for wasm. Pinned at 0.8 until dependencies update
rand = { version = "0.8" }
derive_more = { version = "2.1.1", features = ["from"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"]}
getrandom_old = { version = "0.2.16", features = ["js"], package = "getrandom"}
