[package]
name = "buttplug_server"
version = "10.0.2"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["cdylib", "rlib"]

[features]
default=["tokio-runtime"]
tokio-runtime=["buttplug_core/tokio-runtime"]
wasm=["buttplug_core/wasm", "uuid/js"]

[dependencies]
buttplug_core = { version = "10.0.2", path = "../buttplug_core", default-features = false  }
buttplug_server_device_config = { version = "10.0.3", path = "../buttplug_server_device_config" }
futures = "0.3.32"
futures-util = "0.3.32"
thiserror = "2.0.18"
log = "0.4.29"
getset = "0.1.6"
tokio = { version = "1.50.0", features = ["macros"] }
dashmap = { version = "6.1.0" }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonschema = { version = "0.45.0", default-features = false }
once_cell = "1.21.4"
tokio-stream = "0.1.18"
strum_macros = "0.28.0"
strum = "0.28.0"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
instant = "0.1.13"
tokio-util = "0.7.18"
regex-lite = "0.1.6"
prost = "0.14.3"
paste = "1.0.15"
aes = { version = "0.8.4" }
ecb = { version = "0.1.2", features = ["std"] }
sha2 = { version = "0.10.9", features = ["std"] }
md-5 = "0.10.6"
byteorder = "1.5.0"
# Used by several packages, but we need to bring in the JS feature for wasm. Pinned at 0.8 until
# dependencies update
rand = { version = "0.10" }
derive_more = { version = "2.1.1", features = ["from"] }
evalexpr = { version = "13.1.0", features = ["rand"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"]}
# This is not used anywhere in our code, rather it's to fix issues with some dependencies using
# older versions of getrandom that won't compile for WASM otherwise. 
getrandom_old = { version = "0.2.17", features = ["js"], package = "getrandom"}
