[package]
name = "buttplug_server_hwmgr_btleplug"
version = "10.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server_hwmgr_btleplug"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[dependencies]
buttplug_derive = "0.8.1"
# buttplug_derive = { path = "../buttplug_derive" }
buttplug_core = { path = "../buttplug_core" }
buttplug_server = { path = "../buttplug_server" }
buttplug_server_device_config = { path = "../buttplug_server_device_config" }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.46.1", features = ["sync", "time"] }
btleplug = "0.11.8"
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }
tracing = "0.1.41"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Devices_Bluetooth", "Foundation"] }
