[package]
name = "buttplug_server_hwmgr_hid"
version = "10.0.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server_hwmgr_hid"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[dependencies]
buttplug_core = { version = "10.0.1", path = "../buttplug_core", default-features = false }
buttplug_server = { version = "10.0.1", path = "../buttplug_server", default-features = false }
buttplug_server_device_config = { version = "10.0.2", path = "../buttplug_server_device_config" }
futures = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
tokio = { version = "1.50.0", features = ["sync", "time"] }
async-trait = "0.1.89"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }
tracing = "0.1.44"
thiserror = "2.0.18"

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux hidraw is needed here in order to work with the lovense dongle. libusb breaks it on linux.
# Other platforms are not affected by the feature changes.
hidapi = { version = "2.6.5", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.5", default-features = false, features = ["macos-shared-device"] }
