[package]
name = "buttplug_server_hwmgr_lovense_connect"
version = "10.0.0-beta3"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server_hwmgr_lovense_connect"
path = "src/lib.rs"
test = true
doctest = true
doc = true



# Only build docs on one platform (linux)
[package.metadata.docs.rs]
targets = []
# Features to pass to Cargo (default: [])
features = ["default", "unstable"]

[dependencies]
buttplug_core = { version = "10.0.0-beta3", path = "../buttplug_core" }
buttplug_server = { version = "10.0.0-beta3", path = "../buttplug_server" }
buttplug_server_device_config = { version = "10.0.0-beta3", path = "../buttplug_server_device_config" }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["sync", "time"] }
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }
tracing = "0.1.44"
thiserror = "2.0.18"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-aux = "4.7.0"
