[package]
name = "buttplug_server_hwmgr_lovense_dongle"
version = "10.0.0-beta3"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_server_hwmgr_lovense_dongle"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[dependencies]
buttplug_core = { version = "10.0.0-beta3", path = "../buttplug_core" }
buttplug_server = { version = "10.0.0-beta3", path = "../buttplug_server" }
buttplug_server_device_config = { version = "10.0.0-beta3", path = "../buttplug_server_device_config" }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["sync", "time", "rt"] }
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }
tracing = "0.1.44"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_repr = "0.1.20"
tokio-util = "0.7.17"
tracing-futures = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6.4", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux hidraw is needed here in order to work with the lovense dongle. libusb breaks it on linux.
# Other platforms are not affected by the feature changes.
hidapi = { version = "2.6.4", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.4", default-features = false, features = ["macos-shared-device"] }
