[package]
name = "buttplug_tests"
version = "0.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"

[dependencies]
buttplug_core = { version = "10.0.0", path = "../buttplug_core" }
buttplug_client = { version = "10.0.0", path = "../buttplug_client" }
buttplug_client_in_process = { version = "10.0.0", path = "../buttplug_client_in_process", default-features = false}
buttplug_server = { version = "10.0.0", path = "../buttplug_server" }
buttplug_server_device_config = { version = "10.0.0", path = "../buttplug_server_device_config" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["macros"] }
uuid = "1.20.0"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-futures = "0.2.5"
tokio-test = "0.4.5"
serde = "1.0.228"
async-trait = "0.1.89"
dashmap = "6.1.0"
thiserror = "2.0.18"
getset = "0.1.6"
jsonschema = { version = "0.38.1", default-features = false }
test-case = "3.3.1"
serde_yaml = "0.9.34"
