[package]
name = "buttplug_transport_websocket_tungstenite"
version = "10.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Server Device Config Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_transport_websocket_tungstenite"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[dependencies]
buttplug_core = { version = "10.0.0", path = "../buttplug_core" }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
displaydoc = "0.2.5"
dashmap = { version = "6.1.0", features = ["serde"] }
log = "0.4.29"
getset = "0.1.6"
jsonschema = { version = "0.38.1", default-features = false }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "url"]}
rustls = { version = "0.23.36", default-features = false, features = ["ring"]}
tokio = { version = "1.49.0", features = ["sync", "macros", "io-util"] }
tracing = "0.1.44"
url = "2.5.8"
