[package]
name = "intiface-engine"
version = "4.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "CLI and Library frontend for the Buttplug sex toy control library"
license = "BSD-3-Clause"
homepage = "http://intiface.com"
repository = "https://github.com/intiface/intiface-engine.git"
readme = "README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = [".vscode/**"]

[lib]
name = "intiface_engine"
path = "src/lib.rs"

[[bin]]
name = "intiface-engine"
path = "src/bin/main.rs"

[features]
default=[]
tokio-console=["console-subscriber"]

[dependencies]
buttplug_client = { version = "10.0.0", path = "../buttplug_client" }
buttplug_client_in_process = { version = "10.0.0", path = "../buttplug_client_in_process" }
buttplug_core = { version = "10.0.0", path = "../buttplug_core" }
buttplug_server = { version = "10.0.0", path = "../buttplug_server" }
buttplug_server_device_config = { version = "10.0.0", path = "../buttplug_server_device_config" }
buttplug_server_hwmgr_btleplug = { version = "10.0.0", path = "../buttplug_server_hwmgr_btleplug" }
buttplug_server_hwmgr_hid = { version = "10.0.0", path = "../buttplug_server_hwmgr_hid" }
buttplug_server_hwmgr_lovense_connect = { version = "10.0.0", path = "../buttplug_server_hwmgr_lovense_connect" }
buttplug_server_hwmgr_lovense_dongle = { version = "10.0.0", path = "../buttplug_server_hwmgr_lovense_dongle" }
buttplug_server_hwmgr_serial = { version = "10.0.0", path = "../buttplug_server_hwmgr_serial" }
buttplug_server_hwmgr_websocket = { version = "10.0.0", path = "../buttplug_server_hwmgr_websocket" }
buttplug_server_hwmgr_xinput = { version = "10.0.0", path = "../buttplug_server_hwmgr_xinput" }
buttplug_transport_websocket_tungstenite = { version = "10.0.0", path = "../buttplug_transport_websocket_tungstenite" }
argh = "0.1.13"
log = "0.4.29"
futures = "0.3.31"
tracing-fmt = "0.1.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "fs", "signal", "io-util"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
backtrace = "0.3.76"
ctrlc = "3.5.1"
tokio-util = "0.7.18"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
getset = "0.1.6"
async-trait = "0.1.89"
once_cell = "1.21.3"
lazy_static = "1.5.0"
console-subscriber = { version="0.5.0", optional = true }
local-ip-address = "0.6.10"
rand = "0.9.2"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.8"
libmdns = "0.10.1"
tokio-stream = "0.1.18"
dashmap = "6.1.0"
axum = "0.8.8"
anyhow = "1.0.100"
strum = { version = "0.27.2", features = ["derive"] }

[build-dependencies]
vergen-gitcl = {version = "9.1.0", features = ["build"]}
anyhow = "1.0.100"
